Update to version dated 2009-11-16 12:44 UTC
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@881010 13f79535-47bb-0310-9956-ffa450edef68